// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSwitch > 快照测试 > 小尺寸开关快照 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch delightful-switch-small acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r5"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > 快照测试 > 带标签开关快照 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r6"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      >
        开
      </span>
      <span
        class="delightful-switch-inner-unchecked"
      >
        关
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > 快照测试 > 开启状态开关快照 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r2 delightful-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > 快照测试 > 禁用且开启状态开关快照 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r4 delightful-switch-checked delightful-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > 快照测试 > 禁用状态开关快照 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r3 delightful-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > 快照测试 > 默认开关快照 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r1"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;
